--- a/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/src/app/modules/to-do-list/pages/list/list.component.html
@@ -9,7 +9,7 @@
         <label class="input-label-text" for="inputValue">
             <input type="text" placeholder="Adicione um novo item" autofocus>
 
-            <button class="btn btn-primary" title="Adicionar um novo item">
+            <button class="btn btn-primary-circle" title="Adicionar um novo item">
             </button>
         </label>
     </div>
