--- a/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/src/app/modules/to-do-list/pages/list/list.component.html
@@ -1,16 +1,18 @@
 <div class="container">
     <img src="assets/img/task-list-null.png" alt="Sua lista está vazia - Imagem ilustrativa" loading="eager"/>
 
-    <button class="btn btn-primary">
-        Crie uma lista de tarefas
-    </button>
+    @if (addItem()) {
+        <button class="btn btn-primary" (click)="addItem.set(false)">
+            Crie uma lista de tarefas
+        </button>
+    } @else {
+        <div>
+            <label class="input-label-text" for="inputValue">
+                <input type="text" placeholder="Adicione um novo item" autofocus>
 
-    <div>
-        <label class="input-label-text" for="inputValue">
-            <input type="text" placeholder="Adicione um novo item" autofocus>
-
-            <button class="btn btn-primary-circle" title="Adicionar um novo item">
-            </button>
-        </label>
-    </div>
+                <button class="btn btn-primary-circle" title="Adicionar um novo item">
+                </button>
+            </label>
+        </div>
+    }
 </div>
