--- a/src/app/modules/to-do-list/components/input-add-item/input-add-item.component.html
+++ b/src/app/modules/to-do-list/components/input-add-item/input-add-item.component.html
@@ -1,18 +1,24 @@
-<div>
-    <label class="input-label-text" for="inputValue">
-        <input 
-            type="text" 
-            placeholder="Adicione um novo item" 
-            autofocus 
-            #inputText (keyup.enter)="focusAndAddItem(inputText.value)"
-        />
-
-        <button 
-            class="btn btn-primary-circle" 
-            title="Adicionar um novo item" 
-            (click)="focusAndAddItem(inputText.value)"
-        >
-
-        </button>
-    </label>
-</div>
+<header [ngClass]="{'has-items': inputListItems.length}">
+    @if(inputListItems.length){
+        <h1>Minha Lista</h1>
+    }
+    <div>
+        <label class="input-label-text" for="inputValue">
+            <input 
+                type="text" 
+                placeholder="Adicione um novo item" 
+                autofocus 
+                #inputText (keyup.enter)="focusAndAddItem(inputText.value)"
+                [ngClass]="{'remove-margin-bottom': inputListItems.length}"
+            />
+    
+            <button 
+                class="btn btn-primary-circle" 
+                title="Adicionar um novo item" 
+                (click)="focusAndAddItem(inputText.value)"
+            >
+    
+            </button>
+        </label>
+    </div>
+</header>
