--- a/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/src/app/modules/to-do-list/pages/list/list.component.html
@@ -6,6 +6,8 @@
             Crie uma lista de tarefas
         </button>
     } @else {
-        <app-input-add-item/>
+        <app-input-add-item 
+        [inputListItems]="getListItems()"
+        (outputAddListItems)="getInputAndAddItem($event)" />
     }
 </div>
