--- a/src/app/modules/to-do-list/components/input-add-item/input-add-item.component.html
+++ b/src/app/modules/to-do-list/components/input-add-item/input-add-item.component.html
@@ -2,14 +2,19 @@
     @if(inputListItems.length){
         <h1>Minha Lista</h1>
     }
-    <div>
-        <label class="input-label-text" for="inputValue">
+    <div
+    [ngClass]="{'container': inputListItems.length}"
+    >
+        <label 
+            class="input-label-text" 
+            for="inputValue"
+            [ngClass]="{'remove-margin-bottom': !inputListItems.length}"
+        >
             <input 
                 type="text" 
                 placeholder="Adicione um novo item" 
                 autofocus 
                 #inputText (keyup.enter)="focusAndAddItem(inputText.value)"
-                [ngClass]="{'remove-margin-bottom': inputListItems.length}"
             />
     
             <button 
