--- a/src/app/modules/to-do-list/pages/list/list.component.html
+++ b/src/app/modules/to-do-list/pages/list/list.component.html
@@ -16,4 +16,12 @@
     <app-input-add-item 
     [inputListItems]="getListItems()"
     (outputAddListItem)="getInputAndAddItem($event)" />
+
+    <main class="container"></main>
+
+    <footer>
+        <button class="btn btn-danger" (click)="deleteAllItems()">
+            Deletar todos os Items
+        </button>
+    </footer>
 }
